Fungerar typ nu

--- a/platformio.ini
+++ b/platformio.ini
@@ -5,6 +5,9 @@ framework = arduino
 upload_port = COM8
 monitor_port = COM8
 monitor_speed = 115200
+upload_flags =
+  --before=default_reset
+  --after=no_reset
 
 board_build.partitions = partitions.csv
 board_build.filesystem = littlefs
@@ -18,3 +21,19 @@ lib_deps =
 build_flags =
   -DCORE_DEBUG_LEVEL=1
   -DARDUINOJSON_USE_LONG_LONG=1
+  -DARDUINO_USB_MODE=1
+  -DARDUINO_USB_CDC_ON_BOOT=1
+
+monitor_dtr = 0
+monitor_rts = 0
+monitor_filters = esp32_exception_decoder, time
+
+[env:serial-port-test]
+extends = env:esp32c3
+; Keep test build minimal: ignore heavy web libs
+lib_deps =
+lib_ignore = ESPAsyncWebServer, AsyncTCP, ArduinoJson
+build_flags =
+  ${env:esp32c3.build_flags}
+  -DSERIAL_PORT_TEST=1
+build_src_filter = -<*> +<serial_test.cpp>
